# fdleaky

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: quality.yml  release.yml
fdleaky/: __init__.py  __main__.py  dir_fd_info_store.py  fd.py  fd_info.py  fd_info_factory.py  fd_info_store.py  fd_tracker.py  fdleaky.py
leaky/: __init__.py  __main__.py  fd_tracker.py  leaky.py  shutdown_listener.py
tests/: conftest.py  test_dir_fd_info_store.py  test_dir_fd_info_store_integration.py  test_fd_info_factory.py  test_fd_tracker.py  test_fd_tracker_integ.py  test_fdleaky.py  test_leaky.py  test_main.py  test_shutdown_listener.py
