[tool.poetry]
name = "fdleaky"
version = "0.0.8"
description = "A simple IOC / Dependency injection micro framework for Python."
authors = ["Tim O'Farrell <tofarr@gmail.com>"]
readme = "README.md"
packages = [{include = "fdleaky"}]
exclude = ["tests*"]
repository = "https://github.com/tofarr/fdleaky"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"  # Setting a reasonable Python version requirement
uvicorn = "^0.34"

[tool.poetry.group.dev.dependencies]
black = "~23.3"
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-xdist = "~3.2"
pylint = "~3.0"
